--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Abhishek Choudhari",
   "license": "ISC",
   "dependencies": {
+    "@elastic/elasticsearch": "^8.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
